# npcterm

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  TODO.md  build.sh
.claude-plugin/: README.md  plugin.json
openclaw-plugin/: index.ts  openclaw.plugin.json  package.json
src/: lib.rs  main.rs  mcp.rs
src/input/: keys.rs  mouse.rs
src/manager/: instance.rs  registry.rs
src/mcp/: server.rs  tools.rs  types.rs
src/screen/: formatter.rs  mod.rs  reader.rs
src/status/: events.rs  mod.rs  query.rs
src/terminal/: ansi_handler.rs  cell.rs  emulator.rs  forwarder.rs  grid.rs  mod.rs  selection.rs
src/web/: interaction.rs  messages.rs  mod.rs
src/web/static/: index.html
