[package]
name = "npcterm"
version = "1.3.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Alejandro Quintanar"]
repository = "https://github.com/alejandroqh/npcterm"
readme = "README.md"
keywords = ["terminal", "mcp", "ai", "headless", "harness"]
categories = ["command-line-utilities", "emulators"]
description = "Headless terminal emulator for AI agents with full PTY access over MCP"

[features]
default = ["viewer"]
viewer = ["dep:axum"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
portable-pty = "0.9"
vte = "0.15"
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
turbomcp = "3.0"
turbomcp-server = "3.0"
tokio = { version = "1", features = ["rt", "macros", "net", "sync"] }
schemars = "1.0"
axum = { version = "0.8", features = ["ws"], optional = true }
