[package]
name = "npcterm"
version = "1.3.2"
edition = "2024"
description = "Headless terminal emulator for AI agents"
authors = ["Alejandro Quintanar"]
license = "Apache-2.0"
repository = "https://github.com/alejandroqh/npcterm"
homepage = "https://github.com/alejandroqh/npcterm"
readme = "README.md"
keywords = ["terminal", "mcp", "ai", "headless", "harness"]
categories = ["command-line-utilities", "emulators"]
exclude = [
    "dist/",
    "target/",
    ".claude/",
    ".claude-plugin/",
    "openclaw-plugin/",
    "CLAUDE.md",
    ".mcp.json",
    ".DS_Store",
    "build.sh",
    "benchmark.sh",
    "bench/",
]

[features]
default = ["viewer"]
viewer = ["dep:axum"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
portable-pty = "0.9"
vte = "0.15"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
turbomcp = "3"
turbomcp-server = "3"
tokio = { version = "1", features = ["rt", "macros", "net", "sync"] }
schemars = "1"
axum = { version = "0.8", features = ["ws"], optional = true }
